--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 }
 
 .clientes_bg {
-  background-color: #333452;
+  background-color: white;
   background-image: url("/image/cancha_transparente.png");
   padding: 2rem;
   margin: 2rem 0;
@@ -130,29 +130,28 @@
 }
 
 .navBar_bg {
-  background-color: white;
-  font-family: "Poppins", sans-serif;
+  
+  background-color: transparent !important;  
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
   line-height: 1.3125rem;
 }
 
+.container-fluid{
+  background-color: transparent !important; 
+}
+
 .navbar-brand {
   margin: 0 !important;
   padding: 0 !important;
-  width: 7.9rem !important;
+  width: 5rem !important;
 }
 
-.nav-link.active {
-  color: #CF6C69 !important;
-  font-weight: bold;
-  padding-left: 2.12875rem !important;
-  padding-right: 2.12875rem !important;
-}
 
 .nav-link {
-  color: #000000 !important;
+  color:white !important;
   padding-left: 2.12875rem !important;
   padding-right: 2.12875rem !important;
 }
@@ -173,16 +172,7 @@
   font-weight: normal;
 }
 
-.boton_contacto {
-  width: 9.140625rem;
-  height: 2.5625rem;
-  border-radius: 0.125rem;
-  border: none;
-  background-color: #CF6C69;
-}
-.boton_contacto :hover {
-  color: #000000;
-}
+
 @media screen and (max-width: 576px) {
   .boton_contacto {
     margin-left: 0rem;
@@ -201,19 +191,9 @@
   font-weight: bold;
 }
 
-.boton_contacto_activo {
-  width: 9.140625rem;
-  height: 2.5625rem;
-  border-radius: 0.125rem;
-  border: none;
-  background-color: #333452;
-}
-.boton_contacto_activo :hover {
-  color: #fdfdfd;
-}
 
 .historia_bg {
-  background-color: #333452;
+  background-color: white;
   color: white;
   padding: 1rem 0;
   padding-top: 56rem;
@@ -347,7 +327,7 @@
 }
 
 .comunicaciones_bg {
-  background-color: #333452;
+  background-color: white;
   color: white;
   padding-top: 3.375rem;
   z-index: 100;
@@ -586,7 +566,7 @@
 }
 
 .var_bg {
-  background-color: #333452;
+  background-color: white;
   color: white;
 }
 
@@ -750,7 +730,7 @@
 }
 
 .innovacion_bg {
-  background-color: #333452;
+  background-color: white;
   color: white;
   padding-top: 3.375rem;
 }
