--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 
 /* Generales */
 
+
 h3 {
     margin-left: 120px;
 }
@@ -29,6 +30,7 @@ h4 {
 
 /* Seccion Video */
 
+
 .hero_bg {
     color: cornsilk;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -43,8 +45,8 @@ h4 {
 
 .video_bg {
     width: 100%;
-    position: absolute;
-    margin-top: 1000px;
+    position: relative;
+    margin-top: -20px;
 }
 
 .texto_video {
@@ -52,14 +54,23 @@ h4 {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: bold;
     position: absolute;
-    margin-top: 10rem;
+    margin-top: -500px;
 }
 
 
 /* Seccion Productos */
+
+.nuestros-productos{
+
+    margin-left: 122px;
+    margin-top: 50px;
+    size: 80px;
+    line-height: 40px;
+
+}
 
 .ubicacionCard {
     margin: 0 auto;
@@ -69,15 +80,53 @@ h4 {
     background-color: #353554 !important;
 }
 
+.card{
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+   
+}
+
 
 /* Seccion Caracteristicas */
+
+.experiencia{
+    margin: 50px;
+}
+
+
 
 .ubicacionCaract {
     justify-content: center;
 }
 
 
+
+
+
 /* Seccion Clientes */
+
+.container{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.contenedor-fondo {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.ubicacionCaract {
+    color: white;
+    font-weight: 20;
+    font-size: 25px;
+    line-height: 70px;
+    position: absolute;
+    z-index: 1;
+    padding-top: 150px;
+    padding-left: 50px;
+}
 
 .clientes_bg {
     padding: 2rem;
