--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,38 @@ h4 {
 }
 
 
+/*Contacto*/
+
+.contenedor-contacto {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 60px;
+}
+
+.mapa {
+    width: 473px;
+    height: 323px;
+}
+
+.redes-contacto {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.redes-contacto p {
+    font-weight: 600;
+    size: 25px;
+    line-height: 29px;
+}
+
+.redes-contacto i {
+    color: black;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 0em 0.3em;
+}
+
+
 /* Footer */
 
 footer {
