--- a/css/style.css
+++ b/css/style.css
@@ -30,37 +30,38 @@ h4 {
 /* Seccion Navbar */
 
 .navBar_bg{
-
+     
     z-index: 1;
+    position: absolute;
     
+    }
 
+.bg-light {
+        background-color: transparent !important;
+        opacity: 0;
+        
+}
+  
+ul li a {
+    color: white !important;
+    
+    font-size: 19px;
+    line-height: 20px;
 }
 
-.header .navbar {
-    background-color: transparent !important;
-  }
+/* Seccion Portada */
 
 
-/* Seccion Video */
-
-
-.hero_bg {
-    color: cornsilk;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 1rem 0;
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
-.video_bg {
+.img-portada-home {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/fondohome.png);
+    height: 650px;
     width: 100%;
-    position: relative;
-    margin-top: -45px;
+    background-size: cover;
+    margin-top: -50px;
 }
+
+
+
 
 .texto_video {
     display: flex;
@@ -71,6 +72,7 @@ h4 {
     font-weight: bold;
     position: absolute;
     margin-top: -500px;
+    color:white;
 }
 
 
