--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ ul li a {
 
 .img-fondo {
     width: 100%;
+    height: 500px;
 }
 
 .tamanioCaract {
@@ -136,7 +137,7 @@ ul li a {
 /* Seccion Clientes */
 
 .container {
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
     text-align: center;
 }
@@ -250,7 +251,7 @@ footer {
     font-weight: bold;
     position: absolute;
     margin-top: -300px;
-    margin-left: 470px;
+    margin-left: 0px;
     color: white;
 }
 
@@ -268,4 +269,50 @@ footer {
     color: black;
     margin-left: 122px;
     margin-right: 100px;
+    font-family: 'Merriweather', serif;
 }
+
+/* Cards nosotros */
+
+.container{
+    position:relative;
+    top: 0;
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin:auto;
+    
+}
+
+.cardnosotros{
+    width: 350px;
+    height: 450px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 100px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: black;
+    border: 0.5px solid #cccccc;
+}
+
+.container .card-text{
+    font-weight: 100;
+    text-decoration: none;
+    color: black;   
+    font-family: 'Merriweather', serif;
+    margin: 5px;
+   }
+
+.container .btn-dark{
+    background-color: #353554;
+    border: 0.1px solid #353554;
+    width: 50%;
+    margin-left: 20px;
+    border-radius: 10px;
+      
+   }
