--- a/css/style.css
+++ b/css/style.css
@@ -289,14 +289,14 @@ footer {
 
 .cardnosotros{
     width: 350px;
-    height: 450px;
+    height: 420px;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 100px;
     text-align: center;
     transition: all 0.25s;
-    background-color: black;
+    background-color: white;
     border: 0.5px solid #cccccc;
 }
 
@@ -312,7 +312,7 @@ footer {
     background-color: #353554;
     border: 0.1px solid #353554;
     width: 50%;
-    margin-left: 20px;
+    margin-left: 10px;
     border-radius: 10px;
       
    }
