--- a/css/style.css
+++ b/css/style.css
@@ -272,9 +272,10 @@ footer {
     font-family: 'Merriweather', serif;
 }
 
-/* Cards nosotros */
 
-.container{
+
+
+.container-nosotros{
     position:relative;
     top: 0;
     width: 100%;
@@ -300,7 +301,7 @@ footer {
     border: 0.5px solid #cccccc;
 }
 
-.container .card-text{
+.container-nosotros .card-text{
     font-weight: 100;
     text-decoration: none;
     color: black;   
@@ -308,7 +309,7 @@ footer {
     margin: 5px;
    }
 
-.container .btn-dark{
+.container-nosotros .btn-dark{
     background-color: #353554;
     border: 0.1px solid #353554;
     width: 50%;
@@ -316,3 +317,16 @@ footer {
     border-radius: 10px;
       
    }
+
+
+/* Pagina productos */
+
+
+.img-portada-productos {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/portadaproductos.png);
+    height: 760px;
+    width: 100%;
+    background-size: cover;
+}
+
+
