--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ body {
 /* Generales */
 
 h2 {
-    font-weight: bold;
-    font-size: 37px;
-    line-height: 40px;
+    font-weight: bold !important;
+    font-size: 37px !important;
 }
 
 h3 {
@@ -24,8 +23,18 @@ h4 {
     text-align: center;
 }
 
+h5 {
+    font-weight: 600;
+    font-size: 32px !important;
+    line-height: 20px;
+}
+
 .centrar {
     text-align: center;
+}
+
+.inicio {
+    text-align: start;
 }
 
 .margenArriba {
@@ -81,15 +90,19 @@ ul li a {
     font-size: 1.5rem;
     font-weight: bold;
     position: absolute;
-    margin-top: -500px;
+    margin-top: -620px;
     color: white;
+}
+
+.texto_video h1 {
+    font-size: 90px;
 }
 
 
 /* Seccion Productos */
 
 .nuestros-productos {
-    margin-left: 122px;
+    margin-left: 160px;
     margin-top: 50px;
     size: 80px;
     line-height: 40px;
@@ -99,8 +112,24 @@ ul li a {
     margin: 0 auto;
 }
 
+.card-text {
+    font-family: Merriweather;
+    font-size: 20px;
+    line-height: 38px;
+    color: black;
+}
+
 .btn-dark {
     background-color: #353554 !important;
+    width: 120px;
+    height: 42px;
+    border-radius: 8px !important;
+    margin-left: 27px;
+}
+
+.btn {
+    font-size: 20px !important;
+    line-height: 29px !important;
 }
 
 .card {
@@ -111,40 +140,18 @@ ul li a {
 
 /* Seccion Caracteristicas */
 
-.experiencia {
-    margin: 50px;
-}
-
-.ubicacionCaract {
-    justify-content: center;
-}
-
-.img-fondo {
-    width: 100%;
-    height: 500px;
-}
-
-.tamanioCaract {
-    width: 264px !important;
-    font-family: 'Merriweather', serif;
-    font-size: 23px;
-    line-height: 38px;
-    text-align: center;
-    margin: 0 auto;
-}
-
-
-/* Seccion Clientes */
-
-.container {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    text-align: center;
+.margenCaract {
+    margin-top: 140px;
 }
 
 .contenedor-fondo {
     display: flex;
     justify-content: space-around;
+}
+
+.img-fondo {
+    width: 100%;
+    height: 500px;
 }
 
 .ubicacionCaract {
@@ -156,14 +163,52 @@ ul li a {
     z-index: 1;
     padding-top: 150px;
     padding-left: 50px;
+    justify-content: center;
 }
 
-.clientes_bg {
-    padding: 2rem;
-    margin: 2rem 0;
+.ubicacionCaract h4 {
+    font-size: 30px;
+    line-height: 40px;
 }
 
-.padding {
+.tamanioCaract {
+    width: 264px !important;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.tamanioCaract i {
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.tamanioCaract p {
+    font-family: Merriweather;
+    font-size: 18px;
+    line-height: 38px;
+}
+
+
+/* Seccion Clientes */
+
+.container {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.experiencia {
+    margin: 50px;
+}
+
+.experiencia h4 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 40px;
+}
+
+.paddingClientes {
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -179,21 +224,46 @@ ul li a {
 /*Contacto*/
 
 .mensaje {
-    margin-left: 150px;
+    margin-left: 145px;
     margin-top: 50px;
-    size: 80px;
     line-height: 40px;
-}
-
-.mensaje-contacto {
-    margin-left: 150px;
-    padding: 0;
+    font-size: 37px;
+    line-height: 40px;
 }
 
 .contenedor-contacto {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 60px;
+}
+
+.contenedor-unoContacto {
+    width: 584px;
+}
+
+.mensaje-contacto {
+    color: black;
+    font-size: 23px;
+    line-height: 38px;
+}
+
+.form-control {
+    width: 500px !important;
+}
+
+.contenedor-unoContacto .btn-dark {
+    margin-top: 10px;
+    border: none;
+    border-radius: 8px;
+}
+
+.btn-sm {
+    font-size: 20px !important;
+    line-height: 29px !important;
+}
+
+.div-infoSmart {
+    color: black;
 }
 
 .mapa {
@@ -201,30 +271,11 @@ ul li a {
     height: 323px;
 }
 
-.redes-contacto {
-    text-align: center;
-    padding-bottom: 30px;
-}
-
-.redes-contacto p {
-    font-weight: 600;
-    size: 25px;
-    line-height: 29px;
-}
-
-.redes-contacto i {
-    color: black;
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 0em 0.3em;
-}
-
 
 /* Footer */
 
 footer {
-    background-color: #353554;
-    color: white;
+    background-color: #00000009;
 }
 
 .cajaFooter {
@@ -233,26 +284,30 @@ footer {
 }
 
 
-/* Pagina nosotros */
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+
+/* PAGINA NOSOTROS */
 
 .img-portada-nosotros {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/portadanosotros.png);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/nosotros-portada.png);
     height: 760px;
     width: 100%;
     background-size: cover;
+    background-position: center;
 }
 
-.texto_nosotros {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    font-size: larger;
-    font-weight: bold;
+.titulo_nosotros {
     position: absolute;
-    margin-top: -300px;
+    margin-top: -180px;
     margin-left: 0px;
     color: white;
+}
+
+.titulo_nosotros h1 {
+    font-weight: 600;
+    font-size: 70px;
+    line-height: 20px;
 }
 
 
@@ -261,7 +316,7 @@ footer {
 .nuestra-historia {
     margin-left: 122px;
     margin-top: 50px;
-    size: 80px;
+    font-size: 37px;
     line-height: 40px;
 }
 
@@ -270,57 +325,60 @@ footer {
     margin-left: 122px;
     margin-right: 100px;
     font-family: 'Merriweather', serif;
+    font-size: 19px;
+    line-height: 38px;
 }
 
 
+/* noticias */
 
-
-.container-nosotros{
-    position:relative;
-    top: 0;
-    width: 100%;
-    max-width: 1200px;
-    height: auto;
+.container-nosotros {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin:auto;
-    
 }
 
-.cardnosotros{
-    width: 350px;
-    height: 420px;
+.cardnosotros {
+    width: 507px;
+    height: 706px;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    margin: 100px;
-    text-align: center;
+    margin: 60px;
     transition: all 0.25s;
     background-color: white;
     border: 0.5px solid #cccccc;
 }
 
-.container-nosotros .card-text{
-    font-weight: 100;
-    text-decoration: none;
-    color: black;   
-    font-family: 'Merriweather', serif;
-    margin: 5px;
-   }
+.card-title {
+    font-size: 25px !important;
+    line-height: 40px;
+    padding-left: 30px;
+    margin-top: 10px;
+}
 
-.container-nosotros .btn-dark{
+.card-text {
+    text-decoration: none;
+    color: black;
+    font-family: 'Merriweather', serif;
+    padding-left: 30px;
+    font-size: 20px;
+    line-height: 38px;
+}
+
+.container-nosotros .btn-dark {
     background-color: #353554;
     border: 0.1px solid #353554;
-    width: 50%;
-    margin-left: 10px;
+    width: 200px;
+    margin-left: 30px;
     border-radius: 10px;
-      
-   }
+}
 
 
-/* Pagina productos */
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
+
+/* PAGINA PRODUCTOS*/
 
 .img-portada-productos {
     background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/portadaproductos.png);
@@ -329,4 +387,54 @@ footer {
     background-size: cover;
 }
 
+.titulo_productos {
+    position: absolute;
+    margin-top: -180px;
+    margin-left: 0px;
+    color: white;
+}
 
+.titulo_productos h1 {
+    font-weight: 600;
+    font-size: 70px;
+    line-height: 20px;
+}
+
+
+/* intercomunicadores */
+
+.titulo-intercomunicador {
+    margin-top: 50px;
+    margin-left: 122px;
+}
+
+.productos-ubicacion {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.tamanio-textoIntercomunicador {
+    width: 588px;
+}
+
+.tamanio-textoIntercomunicador p {
+    font-size: 20px;
+    line-height: 38px;
+    margin-top: 20px;
+    color: black;
+}
+
+.productos-card {
+    justify-content: space-evenly;
+}
+
+.titulo-cardProductos {
+    font-size: 23px !important;
+    line-height: 40px;
+}
+
+.texto-cardProductos {
+    font-size: 19px;
+    line-height: 29px;
+}
