--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h5 {
     width: 80%;
 }
 
-.navbar-brand{
+.navbar-brand {
     margin-left: 30px;
 }
 
@@ -65,6 +65,10 @@ h5 {
     background-color: #353554;
 }
 
+.logoUbicacion {
+    margin-left: 80px;
+}
+
 ul li {
     padding-left: 50px;
 }
@@ -72,7 +76,7 @@ ul li {
 ul li a {
     color: white !important;
     font-weight: 600;
-    font-size: 19px;
+    font-size: 20px;
     line-height: 20px;
 }
 
@@ -80,7 +84,7 @@ ul li a {
 /* Seccion Portada */
 
 .img-portada-home {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../image/fondohome.png);
+    background-image: url(../image/fondohome.png);
     height: 760px;
     width: 100%;
     background-size: cover;
@@ -91,22 +95,22 @@ ul li a {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 40px;
+    line-height: 27px;
     position: absolute;
     margin-top: -620px;
     color: white;
 }
 
 .texto_video h1 {
-    font-size: 90px;
+    font-size: 100px;
 }
 
 
 /* Seccion Productos */
 
 .nuestros-productos {
-    margin-left: 160px;
+    margin-left: 122px;
     margin-top: 50px;
     size: 80px;
     line-height: 40px;
@@ -138,7 +142,7 @@ ul li a {
 
 .card {
     border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -420,14 +424,19 @@ footer {
 
 .tamanio-textoIntercomunicador {
     width: 588px;
+    margin-left: -10px;
 }
 
 .tamanio-textoIntercomunicador p {
+    font-family: 'Merriweather', serif;
     font-size: 20px;
     line-height: 38px;
     margin-top: 20px;
     color: black;
 }
+
+
+/* Cards productos */
 
 .productos-card {
     justify-content: space-evenly;
@@ -439,6 +448,7 @@ footer {
 }
 
 .texto-cardProductos {
+    color: black;
     font-size: 19px;
     line-height: 29px;
 }
@@ -452,8 +462,37 @@ footer {
 }
 
 
+/* Var */
 
-.video-productos{
+.fondoVar {
+    background-image: url(../image/fondoproductos.png);
+}
+
+.ubicacionVar {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.tituloVar {
+    padding-top: 200px;
+    margin-left: 122px;
+}
+
+.tamanio-textoVar {
+    width: 588px;
+    margin-left: 2px;
+}
+
+.tamanio-textoVar p {
+    font-family: 'Merriweather', serif;
+    font-size: 20px;
+    line-height: 38px;
+    margin-top: 20px;
+    color: black;
+}
+
+.video-productos {
     width: 80%;
     margin-left: 150px;
     margin-top: 100px;
