--- a/css/style.css
+++ b/css/style.css
@@ -329,23 +329,22 @@ footer {
 .nuestra-historia {
     margin-left: 122px;
     margin-top: 50px;
-    font-size: 37px;
+    size: 80px;
     line-height: 40px;
 }
 
-.texto-nosotros {
+.texto-nosotros p {
     color: black;
-    margin-left: 122px;
-    margin-right: 100px;
+    margin-left: 18px;
     font-family: 'Merriweather', serif;
-    font-size: 19px;
-    line-height: 38px;
+    font-size: 11px;
+    line-height: 15px;
 }
 
 
 /* noticias */
 
-.container-nosotros {
+/* .container-nosotros {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -385,7 +384,7 @@ footer {
     width: 200px;
     margin-left: 30px;
     border-radius: 10px;
-}
+} */
 
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -724,10 +723,106 @@ footer {
         width: 375px;
         height: 375px;
     }
+     
+
+    .titulo_nosotros {
+        position: absolute;
+        margin-top: -85px;
+        margin-left: 0px;
+        color: white;
+    }
+    
+    .titulo_nosotros h1 {
+        font-weight: 600;
+        font-size: 35px;
+        line-height: 20px;
+    }
+    
+    
+    /* Texto nosotros */
+    
+    .nuestra-historia {
+        margin-left: 25px;
+        margin-top: 50px;
+        font-size: 37px;
+        line-height: 40px;
+    }
+    
+    .texto-nosotros {
+        color: black;
+        margin-left: 122px;
+        margin-right: 100px;
+        font-family: 'Merriweather', serif;
+        font-size: 19px;
+        line-height: 38px;
+    }
+    
+    
+    /* noticias */
+    
+    .container-nosotros {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .cardnosotros {
+        width: 507px;
+        height: 620px;
+        border-radius: 8px;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
+        margin: 60px;
+        transition: all 0.25s;
+        background-color: white;
+        border: 0.5px solid #cccccc;
+    }
+    
+    .card-title {
+        font-size: 25px !important;
+        line-height: 40px;
+        padding-left: 30px;
+        margin-top: 10px;
+    }
+    
+    .card-text {
+        text-decoration: none;
+        color: black;
+        font-family: 'Merriweather', serif;
+        padding-left: 30px;
+        font-size: 20px;
+        line-height: 38px;
+    }
+    
+    .container-nosotros .btn-dark {
+        background-color: #353554;
+        border: 0.1px solid #353554;
+        width: 200px;
+        margin-left: 30px;
+        border-radius: 10px;
+    }
+
+
+
+
+
     /* PAGINA PRODUCTOS*/
     /* Portada*/
     .img-portada-productos {
         width: 375px;
         height: 375px;
+    }
+
+    .titulo_productos {
+        position: absolute;
+        margin-top: -85px;
+        margin-left: 0px;
+        color: white;
+    }
+    
+    .titulo_productos h1 {
+        font-weight: 600;
+        font-size: 35px;
+        line-height: 20px;
     }
 }
