--- a/css/style.css
+++ b/css/style.css
@@ -743,8 +743,8 @@ footer {
     /* Texto nosotros */
 
     .nuestra-historia {
-        margin-left: 122px;
-        margin-top: 50px;
+        margin-left: 22px;
+        margin-top: 20px;
         size: 80px;
         line-height: 40px;
     }
@@ -753,6 +753,7 @@ footer {
         color: black;
         margin-left: 22px !important;
         margin-right: 22px !important;
+        margin-top: -25px !important;
         font-family: 'Merriweather', serif;
         font-size: 11px !important;
         line-height: 15px !important;
@@ -770,8 +771,8 @@ footer {
     }
     
     .cardnosotros {
-        width: 507px;
-        height: 620px;
+        width: 329px;
+        height: 329px;
         border-radius: 8px;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
         overflow: hidden;
@@ -782,25 +783,25 @@ footer {
     }
     
     .card-title {
-        font-size: 25px !important;
-        line-height: 40px;
-        padding-left: 30px;
-        margin-top: 10px;
+        font-size: 13px !important;
+        line-height: 20px;
+        padding-left: 10px;
+        margin-top: 15px;
     }
     
     .card-text {
         text-decoration: none;
         color: black;
         font-family: 'Merriweather', serif;
-        padding-left: 30px;
-        font-size: 20px;
-        line-height: 38px;
+        padding-left: 10px;
+        font-size: 11px;
+        line-height: 15px;
     }
     
     .container-nosotros .btn-dark {
         background-color: #353554;
         border: 0.1px solid #353554;
-        width: 200px;
+        width: 100px;
         margin-left: 30px;
         border-radius: 10px;
     }
