--- a/css/style.css
+++ b/css/style.css
@@ -829,4 +829,109 @@ footer {
         font-size: 35px;
         line-height: 20px;
     }
+
+/* intercomunicadores */
+
+.titulo-intercomunicador {
+    margin-left: 22px;
+        margin-top: 20px;
+        size: 80px;
+        line-height: 40px;
+}
+
+.productos-ubicacion {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.tamanio-textoIntercomunicador {
+    width: 588px;
+    margin-left: -10px;
+}
+
+.img-intercomunicador{
+    width: 220px;
+    height: 290px;
+    margin-left: -260px;
+    margin-right: 75px;
+    margin-top: 8px;
+    padding: 30px;
+}
+
+.tamanio-textoIntercomunicador p {
+    color: black;
+        margin-left: 30px !important;
+        margin-right: 5px !important;
+        margin-top: 300px !important;
+        font-family: 'Merriweather', serif;
+        font-size: 11px !important;
+        line-height: 15px !important;
+}
+
+
+/* Cards productos */
+
+.productos-card {
+    justify-content: space-evenly;
+    Width:256px;
+Height:189px;
+}
+
+.titulo-cardProductos {
+    font-size: 23px !important;
+    line-height: 40px;
+}
+
+.texto-cardProductos {
+    color: black;
+    font-size: 19px;
+    line-height: 29px;
+}
+
+.card i {
+    color: #353554;
+    margin-top: 25px;
+    text-decoration: none;
+    font-size: 1.5em;
+    padding: 0em 0.3em;
+} 
+
+
+/* Var */
+
+/* .fondoVar {
+    background-image: url(../image/fondoproductos.png);
+}
+
+.ubicacionVar {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.tituloVar {
+    padding-top: 200px;
+    margin-left: 122px;
+}
+
+.tamanio-textoVar {
+    width: 588px;
+    margin-left: 2px;
+}
+
+.tamanio-textoVar p {
+    font-family: 'Merriweather', serif;
+    font-size: 20px;
+    line-height: 38px;
+    margin-top: 20px;
+    color: black;
+}
+
+.video-productos {
+    width: 80%;
+    margin-left: 150px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}  */
 }
